--- a/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/conFusion/index.html
+++ b/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/conFusion/index.html
@@ -16,58 +16,102 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+				 aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="img/logo.png" height=30 width=40></a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#"><span class="glyphicon glyphicon-home"
+				<a class="navbar-brand" href="#"><img src="img/logo.png" height=30 width=40></a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#"><span class="glyphicon glyphicon-home"
                          aria-hidden="true"></span> Home</a></li>
-                    <li><a href="aboutus.html">
-                        <span class="glyphicon glyphicon-info-sign"
-                         aria-hidden="true"></span> About</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                         role="button" aria-haspopup="true" aria-expanded="false">
-                         <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> 
-                         Menu <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Appetizers</a></li>
-                            <li><a href="#">Main Courses</a></li>
-                            <li><a href="#">Desserts</a></li>
-                            <li><a href="#">Drinks</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li class="dropdown-header">Specials</li>
-                            <li><a href="#">Lunch Buffet</a></li>
-                            <li><a href="#">Weekend Brunch</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contactus.html">
-                        <i class="fa fa-envelope-o"></i> Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+					<li>
+						<a href="aboutus.html">
+							<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
+					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Menu <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Appetizers</a></li>
+							<li><a href="#">Main Courses</a></li>
+							<li><a href="#">Desserts</a></li>
+							<li><a href="#">Drinks</a></li>
+							<li role="separator" class="divider"></li>
+							<li class="dropdown-header">Specials</li>
+							<li><a href="#">Lunch Buffet</a></li>
+							<li><a href="#">Weekend Brunch</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="contactus.html">
+							<i class="fa fa-envelope-o"></i> Contact</a>
+					</li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a data-toggle="modal" data-target="#loginModal">
+						<span class="glyphicon glyphicon-log-in"></span> Login</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-	<header id"top" class="jumbotron">
-		<div  class="container">
+	<div id="loginModal" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Login </h4>
+				</div>
+				<div class="modal-body">
+					<form class="form-inline">
+						<div class="form-group">
+							<label class="sr-only" for="email">Email Address</label>
+							<input type="email" class="form-control input-sm" id="email" placeholder="Email">
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="password">Password</label>
+							<input type="password" class="form-control input-sm" id="password" placeholder="Password">
+						</div>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox"> Remember me
+							</label>
+						</div>
+						<button type="submit" class="btn btn-info btn-sm">Sign in</button>
+						<button type="submit" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<header id "top" class="jumbotron">
+		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-8">
 					<h1>Ristorante con Fusion</h1>
 					<p style="padding:40px;"></p>
-					<p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+					<p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
+						will tickle your culinary senses!</p>
 				</div>
 				<div class="col-xs-12 col-sm-2">
 					<p style="padding: 20px"></p>
 					<img src="img/logo.png" class="img-responsive">
+				</div>
+				<div class="col-xs-12 col-sm-2">
+					<p style="padding: 40px"></p>
+					<a type="button" class="btn btn-warning btn-block" data-toggle="tooltip" title="Or Call us at +852 12345678" data-placement="bottom"
+					 href="#reservefrom">Reserve Table</a>
 				</div>
 			</div>
 		</div>
@@ -92,7 +136,8 @@
 							<span class="label label-danger label-xs">Hot</span>
 							<span class="badge">$4,99</span>
 						</h2>
-						<p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+						<p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry
+							tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
 						<p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
 					</div>
 				</div>
@@ -106,7 +151,8 @@
 			</div>
 			<div class="col-xs-12 col-sm-9">
 				<h2>Weekend Grand Buffet</h2>
-				<p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+				<p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees
+					and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
 				<p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
 			</div>
 		</div>
@@ -126,7 +172,8 @@
 					<div class="media-body">
 						<h2 class="media-heading">Alberto Somayya</h2>
 						<h4>Executive Chef</h4>
-						<p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+						<p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the
+							culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
 						<p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
 					</div>
 				</div>
@@ -136,7 +183,7 @@
 
 	<footer id="contact" class="row-footer">
 		<div class="container">
-			<div class="row">             
+			<div class="row">
 				<div class="col-xs-5 col-xs-offset-1  col-sm-2 col-sm-offset-1">
 					<h5>Links</h5>
 					<ul class="list-unstyled">
@@ -149,9 +196,7 @@
 				<div class="col-xs-6 col-sm-5">
 					<h5>Our Address</h5>
 					<address>
-						121, Clear Water Bay Road<br>
-						Clear Water Bay, Kowloon<br>
-						HONG KONG<br>
+						121, Clear Water Bay Road<br> Clear Water Bay, Kowloon<br> HONG KONG<br>
 						<i class="fa fa-phone"></i>: +852 1234 5678<br>
 						<i class="fa fa-fax"></i>: +852 8765 4321<br>
 						<i class="fa fa-envelope"></i>: <a href="mailto:confusion@food.net">confusion@food.net</a>
@@ -160,15 +205,15 @@
 				<div class="col-xs-12 col-sm-4">
 					<div class="nav navbar-nav" style="padding: 40px 10px;">
 						<a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
-						<i class="fa fa-google-plus"></i></a>
+							<i class="fa fa-google-plus"></i></a>
 						<a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
-						<i class="fa fa-facebook"></i></a>
+							<i class="fa fa-facebook"></i></a>
 						<a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">
-						<i class="fa fa-linkedin"></i></a>
+							<i class="fa fa-linkedin"></i></a>
 						<a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
-						<i class="fa fa-twitter"></i></a>
+							<i class="fa fa-twitter"></i></a>
 						<a class="btn btn-social-icon btn-youtube" href="http://youtube.com/">
-						<i class="fa fa-youtube"></i></a>
+							<i class="fa fa-youtube"></i></a>
 						<a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope"></i></a>
 					</div>
 				</div>
@@ -183,5 +228,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="../js/bootstrap.min.js"></script>
+	<script>
+		$(document).ready(function () {
+			$('[data-toggle="tooltip"]').tooltip();
+		});
+	</script>
 </body>
+
 </html>
