--- a/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/conFusion/index.html
+++ b/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/conFusion/index.html
@@ -58,7 +58,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li>
 						<a data-toggle="modal" data-target="#loginModal">
-						<span class="glyphicon glyphicon-log-in"></span> Login</a>
+							<span class="glyphicon glyphicon-log-in"></span> Login</a>
 					</li>
 				</ul>
 			</div>
@@ -110,14 +110,136 @@
 				</div>
 				<div class="col-xs-12 col-sm-2">
 					<p style="padding: 40px"></p>
-					<a type="button" class="btn btn-warning btn-block" data-toggle="tooltip" title="Or Call us at +852 12345678" data-placement="bottom"
-					 href="#reservefrom">Reserve Table</a>
+					<a type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#reservationModal">Reserve Table</a>
 				</div>
 			</div>
 		</div>
 	</header>
 
+	<div id="reservationModal" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Reserve Table</h4>
+				</div>
+				<div class="modal-body">
+					<form class="form-horizontal">
+						<div class="form-group">
+							<label for="numberOfGuests" class="col-sm-2 control-label">Number of Guests</label>
+							<div class="col-sm-10">
+								<label class="radio-inline">
+									<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+								</label>
+								<label class="radio-inline">
+									<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
+								</label>
+								<label class="radio-inline">
+									<input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
+								</label>
+								<label class="radio-inline">
+									<input type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option3"> 4
+								</label>
+								<label class="radio-inline">
+									<input type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option3"> 5
+								</label>
+								<label class="radio-inline">
+									<input type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option3"> 6
+								</label>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="section" class="col-sm-2 control-label">Section</label>
+							<div class="col-sm-10 btn-group" data-toggle="buttons">
+								<label class="btn btn-success active">
+    								<input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+  								</label>
+								<label class="btn btn-danger">
+    								<input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+  								</label>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="section" class="col-sm-2 control-label">Date and Time</label>
+							<div class="col-sm-10 form-inline">
+								<input type="date" class="form-control input" id="date" placeholder="Date">
+								<input type="time" class="form-control input" id="time" placeholder="Time">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<button type="submit" class="btn btn-primary">Reserve</button>
+								<button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
+							</div>
+						</div>
+					</form>
+					<div class="alert alert-warning" role="alert"><strong>Warning</strong>:: Please <strong>call</strong> us to reserve for more than six guests</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div id="about" class="container">
+		<div class="row row-content">
+			<div class="col-xs-12">
+				<div id="mycarousel" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#mycarousel" data-slide-to="1"></li>
+						<li data-target="#mycarousel" data-slide-to="2"></li>
+					</ol>
+
+					<div class="carousel-inner" role="listbox">
+						<div class="item active">
+							<img class="img-responsive" src="img/uthappizza.png" alt="Uthappizza">
+							<div class="carousel-caption">
+								<h2>Uthappizza <span class="label label-danger">Hot</span> <span class="badge">$4.99</span></h2>
+								<p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry
+									tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+								<p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+							</div>
+						</div>
+						<div class="item">
+							<img class="img-responsive" src="img/buffet.png" alt="Buffet">
+							<div class="carousel-caption">
+								<h2>Weekend Grand Buffet <span class="label label-danger label-xs">New</span></h2>
+								<p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees
+									and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+								<p> <a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+							</div>
+						</div>
+						<div class="item">
+							<img class="img-responsive" src="img/alberto.png" alt="Alberto">
+							<div class="carousel-caption">
+								<h2 class="media-heading">Alberto Somayya</h2>
+								<h4>Executive Chef</h4>
+								<p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in
+									the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+								<p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+							</div>
+						</div>
+					</div>
+					<!-- Controls -->
+					<a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+					<div class="btn-group" id="carouselButtons">
+						<button class="btn btn-danger btn-xs" id="carousel-pause">
+							<span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
+						</button>
+						<button class="btn btn-danger btn-xs" id="carousel-play">
+							<span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div class="row row-content">
 			<div class="col-xs-12 col-sm-3 col-sm-push-9">
 				<p style="padding:20px;"></p>
@@ -229,8 +351,16 @@
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="../js/bootstrap.min.js"></script>
 	<script>
-		$(document).ready(function () {
-			$('[data-toggle="tooltip"]').tooltip();
+		$(document).ready(function() {
+			$("#mycarousel").carousel({interval: 2000});
+
+			$("#carousel-pause").click(function(){
+				$("#mycarousel").carousel('pause');
+			});
+
+			$("#carousel-play").click(function(){
+				$("#mycarousel").carousel('cycle');
+			});
 		});
 	</script>
 </body>
