Usando bower para gerenciar as dependencias de projetos web

--- a/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/conFusion/contactus.html
+++ b/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/conFusion/contactus.html
@@ -8,11 +8,11 @@
 
     <title>Ristorante Con Fusion: About Us</title>
         <!-- Bootstrap -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="../css/font-awesome.min.css" rel="stylesheet">
-    <link href="../css/bootstrap-social.css" rel="stylesheet">
-    <link href="../css/mystyles.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/css/font-awesome.css" rel="stylesheet" type="text/css">
+	<link href="../css/myStyles.css" rel="stylesheet" type="text/css">
+	<link href="../css/bootstrap-social.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -228,7 +228,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
