--- a/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/conFusion/index.html
+++ b/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/conFusion/index.html
@@ -8,10 +8,10 @@
 
 	<title>Ristorante Con Fusion</title>
 
-	<link href="../css/bootstrap.min.css" rel="stylesheet">
-	<link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<link href="../css/myStyles.css" rel="stylesheet" type="text/css">
-	<link href="../css/font-awesome.css" rel="stylesheet" type="text/css">
 	<link href="../css/bootstrap-social.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -349,7 +349,7 @@
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="../js/bootstrap.min.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script>
 		$(document).ready(function() {
 			$("#mycarousel").carousel({interval: 2000});
